fixed jumping menu button

--- a/_assets/css/_media-queries.sass
+++ b/_assets/css/_media-queries.sass
@@ -257,6 +257,8 @@
     height: 8rem
     z-index: 9
     transition: all 0.25s linear
+    top: 0
+    left: 0
     &::before
       content: '\f0c9'
       position: absolute
